# easy_scp

./: CMakeLists.txt  LICENSE  README.md  config.c  config.h  main.c
